--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "redux-logger": "^2.6.1"
   },
   "dependencies": {
+    "flexboxgrid": "6.3.1",
     "jquery": "^3.1.1",
     "material-ui": "^0.16.1",
     "moment": "^2.18.1",
