--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^0.6.0",
+    "react-scripts": "^0.9.5",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "flexboxgrid": "6.3.1",
+    "immutable": "3.8.1",
     "jquery": "^3.1.1",
     "material-ui": "^0.16.1",
     "moment": "^2.18.1",
     "promise": "^7.1.1",
+    "prop-types": "15.5.10",
     "react": "^15.4.0",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.4.0",
@@ -25,6 +27,7 @@
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^2.0.0",
     "redux": "^3.5.2",
+    "redux-auth": "0.0.5-beta5",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.1.0"
   },
